--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -7,18 +7,25 @@
   width:1200px;
   // left side is 270
   // 1200-330 = 870
-  // 20px free room
+  // 50px free room
   margin:0 auto;
 }
 
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+}
 
 header {
     width:330px;
+    float:left;
     padding-bottom:50px;
 }
 
 section {
-  width:850px;
+  width:820px;
   float:right;
   padding-bottom:50px;
 }
