--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -22,12 +22,13 @@ header {
     width:330px;
     float:left;
     padding-bottom:50px;
-    overflow:scroll;
+    overflow-y:auto;
 }
 
 footer {
-    position:fixed;
+
     bottom:10px;
+    overflow:hidden;
 }
 
 section {
