--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -22,7 +22,8 @@ header {
     width:330px;
     float:left;
     padding-bottom:50px;
-    overflow-y:auto;
+    overflow-y:scroll;
+    height:800px;
 }
 
 footer {
