--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -21,15 +21,16 @@
 header {
     width:330px;
     float:left;
+    padding-right:5px;
     padding-bottom:50px;
     overflow-y:scroll;
-    height:800px;
+    height:1000px;
 }
 
 footer {
-
-    bottom:10px;
-    overflow:hidden;
+    flex: 0 0 10px;
+    margin-top: auto;
+    overflow: hidden;
 }
 
 section {
