--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -24,13 +24,12 @@ header {
     padding-right:5px;
     padding-bottom:50px;
     overflow-y:scroll;
-    height:1000px;
+    height:100%;
 }
 
 footer {
     flex: 0 0 10px;
     margin-top: auto;
-    overflow: hidden;
 }
 
 section {
