--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -24,7 +24,7 @@ header {
     padding-right:5px;
     padding-bottom:50px;
     overflow-y:scroll;
-    height:100%;
+    height:auto;
 }
 
 footer {
