--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -26,11 +26,11 @@ header {
     height:100%;
 }
 
-footer {
-    position: fixed;
-    bottom:10px;
-    overflow:hidden;
-}
+// footer {
+//     position: fixed;
+//     bottom:10px;
+//     overflow:hidden;
+// }
 
 section {
   width:820px;
