--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -23,7 +23,7 @@ header {
     float:left;
     padding-bottom:50px;
     overflow-y:scroll;
-    height:100%;
+    height:1000px;
 }
 
 // footer {
