--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -22,7 +22,7 @@ header {
     width:330px;
     float:left;
     padding-bottom:50px;
-    overflow-y:scroll;
+    overflow-y:auto;
     height: 100%;
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
