--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -40,4 +40,9 @@ section {
   width:820px;
   float:right;
   padding-bottom:50px;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  flex-wrap: wrap;
 }
