--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -44,5 +44,5 @@ section {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   -o-box-sizing: border-box;
-  white-space: normal;
+  overflow-wrap: normal;
 }
