--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -6,14 +6,14 @@
 @media screen and (min-width: 1200px) {
   .wrapper {
     width:1200px;
-    // left side is 330
+    // left side is 270
     // 1200-270 = 930
     // 30px free room
     margin:0 auto;
   }
 
   section {
-    width:820px;
+    width:900px;
     float:right;
     padding-bottom:50px;
     box-sizing: border-box;
@@ -32,7 +32,6 @@
 }
 
 header {
-  width: 300px;
   float:left;
   padding-bottom:50px;
   overflow-y:auto;
@@ -41,6 +40,16 @@ header {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   -o-box-sizing: border-box;
+}
+
+section {
+  float:right;
+  padding-bottom:50px;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  word-wrap: break-word;
 }
 
 // // footer {
